kubernetes/torq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: torq-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - <Public-URL>
      secretName: tls-secret
  rules:
    - host: <Public-URL>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: torq-service
                port:
                  number: 8080
